animation et affichage

--- a/restaurants/alafrançaise.html
+++ b/restaurants/alafrançaise.html
@@ -28,49 +28,46 @@
                     <div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Tartare de poulpe acidulé</h3>
-                                <p class="soustitre">Aux zestes d'orange</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <Portée>25€</durée>
+                            <span>25€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
                                 <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-circle-check"></i>
                                 </empan>
                             </div>
-                        </Port>
+                        </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Velouté de légumes d'antan</h3>
-                                <p class="soustitre">Carotte, panais, topinambour</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <Portée>25€</durée>
+                            <span>25€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
                                 <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-circle-check"></i>
                                 </empan>
                             </div>
-                        </Port>
+                        </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Soupe à l'oignon</h3>
-                                <p class="soustitre">Revisitée</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <Portée>25€</durée>
+                            <span>25€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
                                 <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-circle-check"></i>
                                 </empan>
                             </div>
-                        </Port>
+                        </div>
                     </div>
                 </div>
                 <div>
@@ -78,47 +75,44 @@
                     <div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Coquilles Saint-Jacques</h3>
-                                <p class="soustitre">Accompagnées d'une purée de panais</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <Portée>25€</durée>
+                            <span>25€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
                                 <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
-                                </empan>
-                            </div>
-                        </Port>
-                        </div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Magret de canard</h3>
-                                <p class="soustitre">Et parmentier de pommes de terre</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
-                            </article>
-                            <Portée>25€</durée>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-circle-check"></i>
                                 </empan>
                             </div>
                         </div>
+                        </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Pigeonneau d’Ille-et-Vilaine</h3>
-                                <p class="soustitre">Sur son lit de gnocchis aux légumes</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <Portée>25€</durée>
+                            <span>25€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
                                 <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
+                        </div>
+                        <div class="minicadre">
+                            <article class="description">
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
+                            </article>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
                                 </empan>
                             </div>
                         </div>
@@ -129,43 +123,43 @@
                     <div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Pétales de violettes glacés</h3>
-                                <p class="soustitre">Et purée de noisettes</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
+                            <span>25€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
                                 <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-circle-check"></i>
                                 </empan>
                             </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fondant au chocolat</h3>
-                                <p class="soustitre">Revisité</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
+                            <span>25€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
                                 <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-circle-check"></i>
                                 </empan>
                             </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Millefeuille croustillant</h3>
-                                <p class="soustitre">Myrtilles et pâte d’amande</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
+                            <span>25€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
                                 <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-circle-check"></i>
                                 </empan>
                             </div>
                         </div>
