--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -28,35 +28,59 @@
                     <div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Ravioles de foie gras</h3>
-                                <p class="soustitre">Accompagnées de leur crème à la truffe</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <p class="prix">25€</p>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Caviar osciètre</h3>
-                                <p class="soustitre">Sur blini à la farine de blé noir</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <p class="prix">35€</p>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Homard et espuma de potiron</h3>
-                                <p class="soustitre">Marinés aux zestes d'orange</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <p class="prix">20€</p>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Foie gras de canard cuit entier</h3>
-                                <p class="soustitre">Confiture de figue et pain toasté</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <p class="prix">35€</p>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -64,27 +88,45 @@
                 <div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Noix de coquilles Saint-Jacques</h3>
-                            <p class="soustitre">Sur lit de purée de céleri-rave</p>
-                            <i class="ok1 fa-solid fa-circle-check"></i>
+                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <p class="soustitre">Au piment d'Espelette</p>
                         </article>
-                        <p class="prix">40€</p>
+                        <span>25€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name="plat-entrées"
+                                value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                        </div>
                     </div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Langoustine poêlée</h3>
-                            <p class="soustitre">Purée de patate douce</p>
-                            <i class="ok1 fa-solid fa-circle-check"></i>
+                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <p class="soustitre">Au piment d'Espelette</p>
                         </article>
-                        <p class="prix">35€</p>
+                        <span>25€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name="plat-entrées"
+                                value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                        </div>
                     </div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Mijoté de queue de bœuf</h3>
-                            <p class="soustitre">Et riz sauvage aux zestes de citron</p>
-                            <i class="ok1 fa-solid fa-circle-check"></i>
+                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <p class="soustitre">Au piment d'Espelette</p>
                         </article>
-                        <p class="prix">45€</p>
+                        <span>25€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name="plat-entrées"
+                                value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                        </div>
                     </div>
                 </div>
                 <h2 class="titre">DESSERTS</h2>
@@ -92,27 +134,45 @@
                     <div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Macaron noisette et chocolat</h3>
-                                <p class="soustitre">Glace au caramel brun et sel de Guérande</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <p class="prix">18€</p>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Baba au rhum revisité</h3>
-                                <p class="soustitre">Avec son coulis de citron</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <p class="prix">22€</p>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Tarte au citron meringuée</h3>
-                                <p class="soustitre">Déstructurée</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <p class="prix">23€</p>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                     </div>
                 </div>
