--- a/restaurants/lapalettedugout.html
+++ b/restaurants/lapalettedugout.html
@@ -31,42 +31,40 @@
                                 <h3 class="titremenu">Fricassée d'escargots</h3>
                                 <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <Portée>25€</durée>
+                            <span>25€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
                                 <span class="checkbox_icon">
-                                    <i class="ok1 fa-solid fa-circle-check"></i>
+                                    <i class="fa-solid fa-circle-check"></i>
                                 </empan>
                             </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Foie gras de canarf mi-cuit</h3>
-                                <p class="soustitre">Et ses copeaux de truffe noire</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <Portée>25€</durée>
+                            <span>25€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
                                 <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-circle-check"></i>
                                 </empan>
                             </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Oeuf au plat</h3>
-                                <p class="soustitre">Assaisonné à la truffe sur lit de caviar</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <Portée>25€</durée>
+                            <span>25€</span>
                             <div class="carte__plats__infos__checkbox">
                                 <input type="checkbox » name="plat-entrées"
                                     value="Tartare de poulpe acidulé" />
                                 <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-circle-check"></i>
                                 </empan>
                             </div>
                         </div>
@@ -76,96 +74,89 @@
                 <div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Filet de boeuf aux herbes</h3>
-                            <p class="soustitre">Accompagné de sa ribambelle de légumes</p>
-                            <i class="ok1 fa-solid fa-circle-check"></i>
+                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <p class="soustitre">Au piment d'Espelette</p>
                         </article>
-                        <Portée>25€</durée>
+                        <span>25€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name="plat-entrées"
                                 value="Tartare de poulpe acidulé" />
                             <span class="checkbox_icon">
-                                < i class="fa-solid fa-check"></i>
+                                <i class="fa-solid fa-circle-check"></i>
                             </empan>
                         </div>
                     </div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Parmentier de queue de boeuf</h3>
-                            <p class="soustitre">À la truffe noire sa purée de panais</p>
-                            <i class="ok1 fa-solid fa-circle-check"></i>
+                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <p class="soustitre">Au piment d'Espelette</p>
                         </article>
-                        <Portée>25€</durée>
+                        <span>25€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name="plat-entrées"
                                 value="Tartare de poulpe acidulé" />
                             <span class="checkbox_icon">
-                                < i class="fa-solid fa-check"></i>
+                                <i class="fa-solid fa-circle-check"></i>
                             </empan>
                         </div>
                     </div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Filet de turbot</h3>
-                            <p class="soustitre">Aux légumes</p>
-                            <i class="ok1 fa-solid fa-circle-check"></i>
+                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <p class="soustitre">Au piment d'Espelette</p>
                         </article>
-                        <Portée>25€</durée>
+                        <span>25€</span>
                         <div class="carte__plats__infos__checkbox">
                             <input type="checkbox » name="plat-entrées"
                                 value="Tartare de poulpe acidulé" />
                             <span class="checkbox_icon">
-                                < i class="fa-solid fa-check"></i>
+                                <i class="fa-solid fa-circle-check"></i>
                             </empan>
                         </div>
                     </div>
                 </div>
                 <h2 class="titre">DESSERTS</h2>
                 <div>
-                    <div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Paris-Brest</h3>
-                                <p class="soustitre">Revisité</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
-                            </article>
-                            <Portée>25€</durée>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
-                                </empan>
-                            </div>
+                    <div class="minicadre">
+                        <article class="description">
+                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <p class="soustitre">Au piment d'Espelette</p>
+                        </article>
+                        <span>25€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name="plat-entrées"
+                                value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </empan>
                         </div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Macaron au chocolat d'exception</h3>
-                                <p class="soustitre">Et glace à la vanille de Madagascar</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
-                            </article>
-                            <Portée>25€</durée>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
-                                </empan>
-                            </div>
+                    </div>
+                    <div class="minicadre">
+                        <article class="description">
+                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <p class="soustitre">Au piment d'Espelette</p>
+                        </article>
+                        <span>25€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name="plat-entrées"
+                                value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </empan>
                         </div>
-                        <div class="minicadre">
-                            <article class="description">
-                                <h3 class="titremenu">Mousse au chocolat</h3>
-                                <p class="soustitre">Au piment d'Espelette</p>
-                            </article>
-                            <Portée>25€</durée>
-                            <div class="carte__plats__infos__checkbox">
-                                <input type="checkbox » name="plat-entrées"
-                                    value="Tartare de poulpe acidulé" />
-                                <span class="checkbox_icon">
-                                    < i class="fa-solid fa-check"></i>
-                                </empan>
-                            </div>
+                    </div>
+                    <div class="minicadre">
+                        <article class="description">
+                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <p class="soustitre">Au piment d'Espelette</p>
+                        </article>
+                        <span>25€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name="plat-entrées"
+                                value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </empan>
                         </div>
                     </div>
                 </div>
