--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -28,27 +28,45 @@
                     <div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Tartare de thon</h3>
-                                <p class="soustitre">Assaisonné au yuzu</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <p class="prix">25€</p>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Bouchée de homard croustillant</h3>
-                                <p class="soustitre">Et sa farandole de petits légumes</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <p class="prix">35€</p>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Poulet rôti aux herbes de Provence</h3>
-                                <p class="soustitre">Et sa crème de truffe</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <p class="prix">40€</p>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -56,27 +74,45 @@
                 <div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Poulet rôti aux herbes de Provence</h3>
-                            <p class="soustitre">Et sa crème de truffe</p>
-                            <i class="ok1 fa-solid fa-circle-check"></i>
+                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <p class="soustitre">Au piment d'Espelette</p>
                         </article>
-                        <p class="prix">40€</p>
+                        <span>25€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name="plat-entrées"
+                                value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                        </div>
                     </div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Langouste rôtie</h3>
-                            <p class="soustitre">Et ses légumes de saison</p>
-                            <i class="ok1 fa-solid fa-circle-check"></i>
+                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <p class="soustitre">Au piment d'Espelette</p>
                         </article>
-                        <p class="prix">35€</p>
+                        <span>25€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name="plat-entrées"
+                                value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                        </div>
                     </div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Côte de bœuf Angus</h3>
-                            <p class="soustitre">Et sa purée de panais</p>
-                            <i class="ok1 fa-solid fa-circle-check"></i>
+                            <h3 class="titremenu">Fricassée d'escargots</h3>
+                            <p class="soustitre">Au piment d'Espelette</p>
                         </article>
-                        <p class="prix">44€</p>
+                        <span>25€</span>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name="plat-entrées"
+                                value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </empan>
+                        </div>
                     </div>
                 </div>
                 <h2 class="titre">DESSERTS</h2>
@@ -84,27 +120,45 @@
                     <div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Œuf au plat</h3>
-                                <p class="soustitre">Assaisonné à la truffe sur lit de caviar</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <p class="prix">76€</p>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Crème brulée</h3>
-                                <p class="soustitre">Revisitée</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <p class="prix">22€</p>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Tiramisu</h3>
-                                <p class="soustitre">À la noisette</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
+                                <h3 class="titremenu">Fricassée d'escargots</h3>
+                                <p class="soustitre">Au piment d'Espelette</p>
                             </article>
-                            <p class="prix">23€</p>
+                            <span>25€</span>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                     </div>
                 </div>
